# ParMGridGen

./: Makefile.am  configure.ac  mgridgen.pc.in  parmgridgen.pc.in
MGridGen/: Makefile.am
MGridGen/IMlib/: Makefile.am
MGridGen/Lib/: Makefile.am
MGridGen/Programs/: Makefile.am
ParMGridGen/: Makefile.am
ParMGridGen/IMParMetis-2.0/: Makefile.am
ParMGridGen/IMParMetis-2.0/ParMETISLib/: Makefile.am
ParMGridGen/ParLib/: Makefile.am  move.c  parmgridgen.c  util.c
ParMGridGen/Programs/: Makefile.am  io.c  parmgridgen.c
