## Source directory

pkginclude_HEADERS = IMlib.h
pkgincludedir = $(includedir)/mgridgen

lib_LTLIBRARIES = libIMlib.la
libIMlib_la_SOURCES = blas.c  dfkeysort.c  dkeysort.c  file.c  ifkeysort.c  ifloatsort.c  iintsort.c  ikeysort.c  memory.c  sort.c  util.c
libIMlib_la_LDFLAGS = -no-undefined -export-dynamic -version-info 1:0:0
