## Source directory

pkginclude_HEADERS = defs.h  macros.h  parmetis.h  proto.h  rename.h  struct.h
pkgincludedir = $(includedir)/imparmetis

lib_LTLIBRARIES = libIMparmetis.la
libIMparmetis_la_SOURCES = coarsen.c  comm.c  debug.c  diffuse.c  drivers.c  edge_refine.c  fused.c  grsetup.c  iidxsort.c  ikeysort.c  memory.c  remap.c  setup.c  timer.c  util.c  var.c
libIMparmetis_la_LDFLAGS = -no-undefined -export-dynamic -version-info 1:0:0
